[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/themes/RobotoRegular.tres" type="Theme" id=1]
[ext_resource path="res://src/scenes/Menu.gd" type="Script" id=2]

[node name="Popup" type="PopupDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -117.0
margin_top = -152.5
margin_right = 117.0
margin_bottom = 152.5
theme = ExtResource( 1 )
popup_exclusive = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 25.0
margin_top = 20.0
margin_right = -25.0
margin_bottom = -175.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveGame" type="Button" parent="VBoxContainer"]
margin_right = 184.0
margin_bottom = 30.0
size_flags_vertical = 3
text = "Save Game"

[node name="Disconnect" type="Button" parent="VBoxContainer"]
margin_top = 40.0
margin_right = 184.0
margin_bottom = 70.0
size_flags_vertical = 3
text = "Main Menu"

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 80.0
margin_right = 184.0
margin_bottom = 110.0
size_flags_vertical = 3
text = "Quit Game"
[connection signal="pressed" from="VBoxContainer/SaveGame" to="." method="_on_save_game_pressed"]
[connection signal="pressed" from="VBoxContainer/Disconnect" to="." method="_on_disconnect_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_disconnect_pressed"]
